--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -49,7 +49,11 @@ button {
     top: -30%;
     font-size: 1rem;
     color: #ff7008;
-    text-shadow: -1px -1px white, 1px 1px white, -1px 1px white, 1px -1px white;
+    text-shadow:
+      -1px -1px white,
+      1px 1px white,
+      -1px 1px white,
+      1px -1px white;
     animation: bounce 2s infinite alternate-reverse ease-in-out;
     @keyframes bounce {
       from {
@@ -74,47 +78,27 @@ button {
   text-shadow: 0px 2px rgba(0, 0, 0, 0.196);
   position: relative;
 }
-html,
+html {
+}
 body {
-  max-height: 100%;
+  position: relative;
+  background: #fff2d9;
   overflow-x: hidden;
 }
-body {
-  background: #fff2d9;
-  max-width: 100%;
-  // overflow-x: ;
-  &::before {
-    content: "";
-    position: absolute;
-    top: -250px;
-    left: -300px;
-    width: 600px;
-    height: 600px;
-    border-radius: 50%;
-    background: #ff934527;
-    z-index: -1000;
-  }
-  &::after {
-    content: "";
-    position: absolute;
-    top: -550px;
-    right: -320px;
-    width: 800px;
-    height: 800px;
-    border-radius: 50%;
-    background: #ff934527;
-    z-index: -1000;
-  }
-}
 main {
-  overflow: hidden;
-  height: 100%;
+  max-width: 100vw;
+  // overflow: auto;
 }
 .common-heading {
   font-size: 3.4rem;
   color: #2f4057;
-  text-shadow: 3px 3px white, -3px -3px white, 3px 0 white, 0px 3px white,
-    -3px 0 white, 0px -3px white;
+  text-shadow:
+    3px 3px white,
+    -3px -3px white,
+    3px 0 white,
+    0px 3px white,
+    -3px 0 white,
+    0px -3px white;
   text-transform: uppercase;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.185));
 }
